[gd_scene load_steps=26 format=2]

[ext_resource path="res://Tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://Assets/BG/bg_2.3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/prstartk.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/UI/arrow-UP.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/grey_button13.png" type="Texture" id=5]
[ext_resource path="res://Assets/BG/columns_2.2.png" type="Texture" id=6]
[ext_resource path="res://Assets/BG/tower_v2.1.png" type="Texture" id=7]
[ext_resource path="res://Assets/BG/tower_1.3.png" type="Texture" id=8]
[ext_resource path="res://Assets/BGM/LEVEL_1.wav" type="AudioStream" id=9]
[ext_resource path="res://Levels/Level1.gd" type="Script" id=11]
[ext_resource path="res://Items/player1.tscn" type="PackedScene" id=19]
[ext_resource path="res://Items/box.tscn" type="PackedScene" id=20]
[ext_resource path="res://Items/button.tscn" type="PackedScene" id=21]
[ext_resource path="res://Items/cage.tscn" type="PackedScene" id=22]
[ext_resource path="res://Items/orb_solar.tscn" type="PackedScene" id=24]
[ext_resource path="res://Items/orb_lunar.tscn" type="PackedScene" id=25]
[ext_resource path="res://Items/tunnel_lunar.tscn" type="PackedScene" id=26]
[ext_resource path="res://Items/tunnel_solar.tscn" type="PackedScene" id=27]
[ext_resource path="res://Items/door.tscn" type="PackedScene" id=28]
[ext_resource path="res://Items/key_solar.tscn" type="PackedScene" id=29]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.0627451, 0.341176, 0.729412 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.129412, 0.0627451, 0.341176, 0.729412 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 3 )

[node name="Level1" type="Node2D"]
script = ExtResource( 11 )

[node name="BG" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Control" parent="BG"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sky" type="TextureRect" parent="BG/background"]
margin_left = 1.13687e-13
margin_top = -2368.0
margin_right = 256.0
margin_bottom = -1856.0
rect_scale = Vector2( 6.25, 6.25 )
texture = ExtResource( 2 )

[node name="Towers" type="TextureRect" parent="BG/background"]
margin_top = 256.0
margin_right = 448.0
margin_bottom = 768.0
texture = ExtResource( 8 )
expand = true

[node name="Towers2" type="TextureRect" parent="BG/background"]
margin_left = 360.0
margin_top = -296.0
margin_right = 824.0
margin_bottom = 784.0
texture = ExtResource( 8 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Towers5" type="TextureRect" parent="BG/background"]
margin_left = 832.0
margin_top = 440.0
margin_right = 1184.0
margin_bottom = 808.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Towers3" type="TextureRect" parent="BG/background"]
margin_left = 1128.0
margin_top = 128.0
margin_right = 1578.0
margin_bottom = 802.0
rect_scale = Vector2( 1.03125, 1.00398 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Towers4" type="TextureRect" parent="BG/background"]
margin_left = 760.0
margin_top = -120.0
margin_right = 1210.0
margin_bottom = 554.0
rect_scale = Vector2( 1.03125, 1.00398 )
texture = ExtResource( 7 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Columns" type="TextureRect" parent="BG/background"]
margin_right = 1600.0
margin_bottom = 800.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="player1" type="Panel" parent="BG"]
margin_left = 96.0
margin_top = 592.0
margin_right = 352.0
margin_bottom = 752.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="w" type="TextureRect" parent="BG/player1"]
margin_left = 104.0
margin_top = 16.0
margin_right = 153.0
margin_bottom = 61.0
texture = ExtResource( 5 )

[node name="W" type="Label" parent="BG/player1/w"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.6101
margin_top = -15.7951
margin_right = 19.3899
margin_bottom = 20.2049
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "W"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a" type="TextureRect" parent="BG/player1"]
margin_left = 48.0
margin_top = 64.0
margin_right = 97.0
margin_bottom = 109.0
texture = ExtResource( 5 )

[node name="A" type="Label" parent="BG/player1/a"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.6581
margin_top = -16.1837
margin_right = 19.3419
margin_bottom = 19.8163
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="s" type="TextureRect" parent="BG/player1"]
margin_left = 104.0
margin_top = 64.0
margin_right = 153.0
margin_bottom = 109.0
texture = ExtResource( 5 )

[node name="S" type="Label" parent="BG/player1/s"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.712
margin_top = -16.4485
margin_right = 20.288
margin_bottom = 19.5515
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "S"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="d" type="TextureRect" parent="BG/player1"]
margin_left = 160.0
margin_top = 64.0
margin_right = 209.0
margin_bottom = 109.0
texture = ExtResource( 5 )

[node name="D" type="Label" parent="BG/player1/d"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.6456
margin_top = -15.8185
margin_right = 20.3544
margin_bottom = 20.1815
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "D"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Move" type="Label" parent="BG/player1"]
margin_left = 16.0
margin_top = 120.0
margin_right = 240.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 3 )
text = "Player 1 MOVE!"
align = 1
valign = 1

[node name="player2" type="Panel" parent="BG"]
margin_left = 928.0
margin_top = 336.0
margin_right = 1184.0
margin_bottom = 496.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="up" type="TextureRect" parent="BG/player2"]
margin_left = 104.0
margin_top = 16.0
margin_right = 153.0
margin_bottom = 61.0
texture = ExtResource( 5 )

[node name="UP" type="TextureRect" parent="BG/player2/up"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.5
margin_top = -14.5
margin_right = 783.5
margin_bottom = 785.5
rect_scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 4 )

[node name="left" type="TextureRect" parent="BG/player2"]
margin_left = 48.0
margin_top = 64.0
margin_right = 97.0
margin_bottom = 109.0
texture = ExtResource( 5 )

[node name="LEFT" type="TextureRect" parent="BG/player2/left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.5
margin_top = 17.5
margin_right = 783.5
margin_bottom = 817.5
rect_rotation = -90.0
rect_scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 4 )

[node name="down" type="TextureRect" parent="BG/player2"]
margin_left = 104.0
margin_top = 64.0
margin_right = 153.0
margin_bottom = 109.0
texture = ExtResource( 5 )

[node name="DOWN" type="TextureRect" parent="BG/player2/down"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 15.5
margin_top = 17.5
margin_right = 815.5
margin_bottom = 817.5
rect_rotation = 180.0
rect_scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="TextureRect" parent="BG/player2"]
margin_left = 160.0
margin_top = 64.0
margin_right = 209.0
margin_bottom = 109.0
texture = ExtResource( 5 )

[node name="DOWN2" type="TextureRect" parent="BG/player2/right"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 15.5
margin_top = -14.5
margin_right = 815.5
margin_bottom = 785.5
rect_rotation = 90.0
rect_scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Label" parent="BG/player2"]
margin_left = 16.0
margin_top = 120.0
margin_right = 240.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 3 )
text = "Player 2 MOVE!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Panel" parent="BG"]
margin_left = 416.0
margin_top = 400.0
margin_right = 672.0
margin_bottom = 560.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Restart" type="Label" parent="BG/restart"]
margin_left = 8.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 5 )
text = "Press R anytime to restart the level!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 13, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 0, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 15, 0, 12, 15, 0, 13, 15, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 12, 0, 65536, 17, 0, 65542, 15, 0, 65547, 16, 0, 65548, 15, 0, 65549, 17, 0, 65560, 16, 0, 131072, 17, 0, 131083, 16, 0, 131084, 15, 0, 131085, 17, 0, 131096, 16, 0, 196608, 13, 0, 196609, 2, 0, 196610, 3, 0, 196619, 16, 0, 196620, 15, 0, 196621, 17, 0, 196629, 1, 0, 196630, 2, 0, 196631, 2, 0, 196632, 12, 0, 262144, 17, 0, 262150, 1, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 12, 0, 262156, 15, 0, 262157, 13, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 3, 0, 262168, 16, 0, 327680, 17, 0, 327683, 1, 0, 327684, 3, 0, 327691, 16, 0, 327692, 15, 0, 327693, 17, 0, 327704, 16, 0, 393216, 17, 0, 393227, 16, 0, 393228, 15, 0, 393229, 17, 0, 393238, 9, 0, 393240, 16, 0, 458752, 17, 0, 458763, 16, 0, 458764, 15, 0, 458765, 17, 0, 458771, 1, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458776, 12, 0, 524288, 13, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 3, 0, 524299, 16, 0, 524300, 15, 0, 524301, 17, 0, 524312, 16, 0, 589824, 17, 0, 589835, 16, 0, 589836, 15, 0, 589837, 13, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 3, 0, 589848, 16, 0, 655360, 17, 0, 655366, 1, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 12, 0, 655372, 15, 0, 655373, 17, 0, 655384, 16, 0, 720896, 17, 0, 720907, 16, 0, 720908, 15, 0, 720909, 17, 0, 720911, 9, 0, 720920, 16, 0, 786432, 15, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 15, 0, 786444, 15, 0, 786445, 15, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 15, 0 )

[node name="door" parent="." instance=ExtResource( 28 )]
position = Vector2( 416, 192 )
type = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 13, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 0, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 15, 0, 12, 15, 0, 13, 15, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 12, 0, 65536, 17, 0, 65542, 14, 0, 65547, 16, 0, 65548, 15, 0, 65549, 17, 0, 65560, 16, 0, 131072, 17, 0, 131083, 16, 0, 131084, 15, 0, 131085, 17, 0, 131096, 16, 0, 196608, 13, 0, 196609, 2, 0, 196610, 3, 0, 196619, 16, 0, 196620, 15, 0, 196621, 17, 0, 196629, 1, 0, 196630, 2, 0, 196631, 2, 0, 196632, 12, 0, 262144, 17, 0, 262150, 1, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 12, 0, 262156, 15, 0, 262157, 13, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 3, 0, 262168, 16, 0, 327680, 17, 0, 327683, 1, 0, 327684, 3, 0, 327691, 16, 0, 327692, 15, 0, 327693, 17, 0, 327704, 16, 0, 393216, 17, 0, 393227, 16, 0, 393228, 15, 0, 393229, 17, 0, 393238, 9, 0, 393240, 16, 0, 458752, 17, 0, 458763, 16, 0, 458764, 15, 0, 458765, 17, 0, 458771, 1, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458776, 12, 0, 524288, 13, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 3, 0, 524299, 16, 0, 524300, 15, 0, 524301, 17, 0, 524312, 16, 0, 589824, 17, 0, 589835, 16, 0, 589836, 15, 0, 589837, 13, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 3, 0, 589848, 16, 0, 655360, 17, 0, 655366, 1, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 12, 0, 655372, 15, 0, 655373, 17, 0, 655384, 16, 0, 720896, 17, 0, 720907, 16, 0, 720908, 15, 0, 720909, 17, 0, 720911, 9, 0, 720920, 16, 0, 786432, 15, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 15, 0, 786444, 15, 0, 786445, 15, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 15, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="tunnel_lunar" parent="." instance=ExtResource( 26 )]
position = Vector2( 992, 192 )

[node name="tunnel_solar" parent="." instance=ExtResource( 27 )]
position = Vector2( 608, 192 )

[node name="Players" type="Node2D" parent="."]

[node name="player1" parent="Players" instance=ExtResource( 19 )]
position = Vector2( 160, 736 )
id = 1

[node name="player2" parent="Players" instance=ExtResource( 19 )]
position = Vector2( 1440, 728 )
id = 2

[node name="Boxes" type="Node2D" parent="."]

[node name="box" parent="Boxes" instance=ExtResource( 20 )]
position = Vector2( 160, 480 )

[node name="box2" parent="Boxes" instance=ExtResource( 20 )]
position = Vector2( 96, 480 )

[node name="box3" parent="Boxes" instance=ExtResource( 20 )]
position = Vector2( 96, 416 )

[node name="box4" parent="Boxes" instance=ExtResource( 20 )]
position = Vector2( 1056, 736 )

[node name="box5" parent="Boxes" instance=ExtResource( 20 )]
position = Vector2( 1440, 352 )

[node name="Collectibles" type="Node2D" parent="."]

[node name="orb_solar" parent="Collectibles" instance=ExtResource( 24 )]
position = Vector2( 128, 128 )

[node name="orb_lunar" parent="Collectibles" instance=ExtResource( 25 )]
position = Vector2( 960, 520 )

[node name="key_solar" parent="Collectibles" instance=ExtResource( 29 )]
position = Vector2( 1472, 128 )

[node name="button" parent="." instance=ExtResource( 21 )]
position = Vector2( 640, 736 )

[node name="cage" parent="." instance=ExtResource( 22 )]
position = Vector2( 1440, 704 )
scale = Vector2( 2, 2 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
autoplay = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="tunnel_lunar" to="." method="_on_tunnel_lunar_body_entered"]
[connection signal="body_exited" from="tunnel_lunar" to="." method="_on_tunnel_lunar_body_exited"]
[connection signal="body_entered" from="tunnel_solar" to="." method="_on_tunnel_solar_body_entered"]
[connection signal="body_exited" from="tunnel_solar" to="." method="_on_tunnel_solar_body_exited"]
[connection signal="collected" from="Collectibles/orb_solar" to="." method="_on_orb_solar_collected"]
[connection signal="collected" from="Collectibles/orb_lunar" to="." method="_on_orb_lunar_collected"]
[connection signal="collected" from="Collectibles/key_solar" to="door" method="_on_key_solar_collected"]
[connection signal="button_press" from="button" to="cage" method="_on_button_button_press"]
